qr improvements